--- a/public/assets/admin/css/main.css
+++ b/public/assets/admin/css/main.css
@@ -337,16 +337,16 @@ thead {
 }
 
 .form-control {
-    background-color: #54657d;
+    background-color: #484848;
     color: #fff;
     border: 0;
 }
 
 .form-control:focus {
-    background-color: #60738e;
+    background-color: #484848;
     color: #fff;
     border-color: transparent;
-    box-shadow: 0 0 0 0.1rem rgb(180, 206, 233, 0.5);
+    box-shadow: 0 0 0 0.1rem #484848;
 }
 
 .form-group label {
